* Increased the width of left margin of the dvi#content element, avoiding   overlap with the navigation bar when a the minimum font size chosen in   the browser is big. * Avoid the section header to be behind the floating sombrero image by   setting its "clear" property to left.

--- a/octave.css
+++ b/octave.css
@@ -77,10 +77,11 @@ text-align: right;
 
 div#content {
 display: block;
-margin-left: 9em;
+margin-left: 11em;
 }
 
 div.section {
+  clear: left;
 }
 
 /* For all page footers */
@@ -187,7 +188,7 @@ margin: 10px;
 border: 2px solid #000000;
 }
 
-#iml { 
+#iml {
 margin: 10px;
 float: right;
 border: 2px solid #000000;
